# mindless_scripts

./: .gitignore  README.md  pyproject.toml
mindless_scripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mindless_scripts/astro_tools/: astro_planner.py  bright_temp.py  flume.py  process_time_series.py  pulse_timing.py  separation.py  time_turner.py  unicoord.py
mindless_scripts/reduction_tools/: flag.py
mindless_scripts/writing_tools/: atel_table.py
